# wizardd2

./: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  countries.py  status.py
app/core/: config.py  database.py
app/crud/: __init__.py  country.py
app/models/: __init__.py  country.py
app/schemas/: __init__.py  country.py
app/services/: __init__.py  external_api.py  image_service.py
